--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -6,11 +6,8 @@
     LotteryRecord record = null;
     int lType = 0;
 }
-
 <!DOCTYPE html>
-
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
@@ -22,33 +19,26 @@
     <script type="text/javascript" src="/js/yjp.js"></script>
     <script type="text/javascript" src="/js/runTime3.js"></script>
     <style>
-
         .ind_mainUl2 {
             display: none;
         }
     </style>
 </head>
-
 <body style="background:#f3f4f4;">
-
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">彩票开奖查询</a>
     </header>
-
     <div class="hjc_hdNav">
-
 
         <!-- 新增类型选择 By LHS 2018-3-2 -->
         <div class="hdNav_cai_collect">
             <div class="hdNav_cai_lhs_expand"><img src="/images/icon-expand.png"></div>
             <ul class="hdNav_cai_lhs">
-
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
                 {
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
-
                 <div style="clear:both;"></div>
             </ul>
         </div>
@@ -58,26 +48,21 @@
                     <span class="collect"><img src="/images/icon-collect.png"  alt=""/></span>
                 </div>*@
             <ul class="hdNav_cai">
-
                 @foreach (LotteryType2 lotteryType in ViewBag.list)
                 {
                     <li><a href="javascript:;">@lotteryType.Name</a></li>
                 }
-
                 <div style="clear:both;"></div>
             </ul>
         </div>
     </div>
 
-
     <div class="hjc_indexmain" style="margin-top:91px;">
-
         @foreach (LotteryType2 lotteryType in ViewBag.list)
         {
             int[] lTypeArr = lotteryType.SonIdArr;
 
             <ul class="ind_mainUl2">
-
 
                 @for (int j = 0; j < lTypeArr.Length; j++)
                 {
@@ -124,7 +109,6 @@
                             <div class="UL3_bdinfo2">
                                 <div class="ball_wrap">
 
-
                                     @if (lType <= 62 && lType != 5 && lType != 2 && lType != 8 && lType != 4)
                                     {
                                         foreach (string s in numArr)
@@ -136,11 +120,13 @@
                                     }
                                     else if (lType == 2)
                                     {
+                                        int x = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x++;
+                                           
 
-                                            if (index == 6)
+                                            if (x == 6)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -153,11 +139,13 @@
                                     }
                                     else if (lType == 4)
                                     {
+                                        int x1 = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x1++;
 
-                                            if (index == 5 || index == 6)
+
+                                            if (x1 == 5 || x1 == 6)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -172,8 +160,11 @@
                                     }
                                     else if (lType == 5)
                                     {
+
+                                        int x3 = -1;
                                         foreach (string s in numArr)
                                         {
+                                            x3++;
                                             string Color = Util.GetColor(s);
                                             string ys = string.Empty;
                                             switch (Color)
@@ -188,16 +179,23 @@
                                                     ys = "HYJP_LhGreen";
                                                     break;
                                             }
+                                            if (x3 == 6)
+                                            {
+                                                <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+
+                                            }
                                             <span class="ball_spB ball_blue @ys">@s</span>
                                         }
                                     }
                                     else if (lType == 8)
                                     {
+                                        int x2 = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x2++;
 
-                                            if (index == 7)
+
+                                            if (x2 == 7)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -214,13 +212,14 @@
                                         int c = int.Parse(numArr[2]);
                                         int sum = a + b + c;
 
-                                        <span class="ball_spB ball_blue">@numArr[0]</span>
-                                        <span class="ball_spB ball_blue">+</span>
-                                        <span class="ball_spB ball_blue">@numArr[1]</span>
-                                        <span class="ball_spB ball_blue">+</span>
-                                        <span class="ball_spB ball_blue">@numArr[2]</span>
-                                        <span class="ball_spB ball_blue">=</span>
-                                        <span class="ball_spB ball_blue">@sum</span>
+
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[0]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[1]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[2]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">=</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@sum</span>
                                     }
                                     else if (lType == 63 || lType == 64)
                                     {
@@ -231,7 +230,6 @@
                                         }
                                     }
 
-
                                 </div>
                                 <div class="UL3_ZZKJ">
                                     <p>正在开奖中...</p>
@@ -239,9 +237,9 @@
                             </div>
                             <div class="UL3_bdinfo3">
                                 <a href="/Plan/Index/@record.lType" class="UL2_baif3a">计划</a>
-                                <a href="javascript:;" class="UL2_baif3a">双面</a>
-                                <a href="javascript:;" class="UL2_baif3a">长龙</a>
-                                <a href="javascript:;" class="UL2_baif3a">走势</a>
+                                @*<a href="javascript:;" class="UL2_baif3a">双面</a>
+                                    <a href="javascript:;" class="UL2_baif3a">长龙</a>
+                                    <a href="javascript:;" class="UL2_baif3a">走势</a>*@
                                 <a href="/Record/OpenRecord/?lType=@record.lType" class="UL2_baif3a">历史</a>
                                 <a href="/Plan/Post/@record.lType" class="UL2_baif3a">发帖</a>
                                 <a href="/Plan/Index/@record.lType?cur=2" class="UL2_baif3a">排行</a>
@@ -254,13 +252,9 @@
                 }
 
 
-
-
             </ul>
 
         }
-
-
 
         <script>
             $(function () {
@@ -270,15 +264,10 @@
             });
 
         </script>
-
     </div>
 
-
     @Html.Partial("Footer")
-
     <div class="mask" style="display:none;"></div>
-
 </body>
-
 @{Html.RenderAction("index", "PvUvIp");}
 </html>
