--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Gallery.cshtml
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="~/css/c8-icon.css" />
     <link rel="stylesheet" type="text/css" href="~/css/paper.css" />
     <script type="text/javascript" src="~/js/jquery-1.8.3.min.js"></script>
+    <script src="~/js/yjp.js"></script>
 </head>
 
 <body style="background:#F4F4F5;">
@@ -31,6 +32,7 @@
     <header class="hjc_header">
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@Model.Name</a>
+        <a href="javascript::" class="ZX_Sidebar"></a>
     </header>
 
     <div class="alllist">
@@ -115,6 +117,76 @@
 
 
     <script type="text/javascript" src="~/js/view.js"></script>
+
+    <!--侧边栏-->
+    <div class="ZX_CLBox">
+        <div class="CLB_YY"></div>
+        <div class="CLB_con">
+            <ul class="CLB_cNav">
+                <!--cNav_current-->
+                <li>
+                    <a href="/Home/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_1.png"></dt>
+                            <dd>
+                                <p>首页</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Open">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_2.png"></dt>
+                            <dd>
+                                <p>开奖</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="JavaScript:;">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_3.png"></dt>
+                            <dd>
+                                <p>走势</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Home/Plan">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_4.png"></dt>
+                            <dd>
+                                <p>计划</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+                <li>
+                    <a href="/Talking/Index">
+                        <dl class="cNav_Dl">
+                            <dt><img src="~/images/w6_5.png"></dt>
+                            <dd>
+                                <p>聊天</p>
+                                <img src="~/images/w7.png">
+                                <div style="clear:both;"></div>
+                            </dd>
+                        </dl>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 
 @{Html.RenderAction("index", "PvUvIp");}
