--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <meta name="keywords" content="@site.KeyWord">
     <meta name="description" content="@site.Description">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="~/css/c8-icon.css" rel="stylesheet" />
     <script type="text/javascript" src="/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="/js/yjp.js"></script>
@@ -54,7 +54,7 @@
                 </a>
             </li>
             <li>
-                <a href="c8_走势.html">
+                <a href="javascript:;">
                     <i><img src="/images/grids_icon_02.png"></i>
                     <p>走势</p>
                 </a>
@@ -194,11 +194,13 @@
                                     }
                                     else if (lType == 2)
                                     {
+                                        int x = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x++;
 
-                                            if (index == 6)
+
+                                            if (x == 6)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -211,11 +213,13 @@
                                     }
                                     else if (lType == 4)
                                     {
+                                        int x1 = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x1++;
 
-                                            if (index == 5 || index == 6)
+
+                                            if (x1 == 5 || x1 == 6)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -230,8 +234,10 @@
                                     }
                                     else if (lType == 5)
                                     {
+                                        int x3 = -1;
                                         foreach (string s in numArr)
                                         {
+                                            x3++;
                                             string Color = Util.GetColor(s);
                                             string ys = string.Empty;
                                             switch (Color)
@@ -246,16 +252,23 @@
                                                     ys = "HYJP_LhGreen";
                                                     break;
                                             }
+                                            if (x3 == 6)
+                                            {
+                                                <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+                                             
+                                            }
                                             <span class="ball_spB ball_blue @ys">@s</span>
                                         }
                                     }
                                     else if (lType == 8)
                                     {
+                                        int x2 = -1;
                                         foreach (string s in numArr)
                                         {
-                                            int index = numArr.ToList().IndexOf(s);
+                                            x2++;
 
-                                            if (index == 7)
+
+                                            if (x2 == 7)
                                             {
                                                 <span class="ball_spB ball_red HYJP_Blue">@s</span>
                                             }
@@ -272,22 +285,22 @@
                                         int c = int.Parse(numArr[2]);
                                         int sum = a + b + c;
 
-                                         <span class="ball_spB ball_blue">@numArr[0]</span>
-                                         <span class="ball_spB ball_blue">+</span>
-                                         <span class="ball_spB ball_blue">@numArr[1]</span>
-                                         <span class="ball_spB ball_blue">+</span>
-                                         <span class="ball_spB ball_blue">@numArr[2]</span>
-                                         <span class="ball_spB ball_blue">=</span>
-                                         <span class="ball_spB ball_blue">@sum</span>
-                                     }
-                                     else if (lType == 63 || lType == 64)
-                                     {
-                                         foreach (string s in numArr)
-                                         {
-                                             string clazz = "ball_spA No" + s;
-                                             <span class="@clazz">@s</span>
-                                         }
-                                     }
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[0]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[1]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">+</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@numArr[2]</span>
+                                        <span class="ball_spB ball_blue HYJP_PcHao">=</span>
+                                        <span class="ball_spB ball_blue HYJP_Red">@sum</span>
+                                    }
+                                    else if (lType == 63 || lType == 64)
+                                    {
+                                        foreach (string s in numArr)
+                                        {
+                                            string clazz = "ball_spA No" + s;
+                                            <span class="@clazz">@s</span>
+                                        }
+                                    }
 
 
                                 </div>
@@ -297,9 +310,9 @@
                             </div>
                             <div class="UL3_bdinfo3">
                                 <a href="/Plan/Index/@record.lType" class="UL2_baif3a">计划</a>
-                                <a href="javascript:;" class="UL2_baif3a">双面</a>
-                                <a href="javascript:;" class="UL2_baif3a">长龙</a>
-                                <a href="javascript:;" class="UL2_baif3a">走势</a>
+                                @*<a href="javascript:;" class="UL2_baif3a">双面</a>
+                                    <a href="javascript:;" class="UL2_baif3a">长龙</a>
+                                    <a href="javascript:;" class="UL2_baif3a">走势</a>*@
                                 <a href="/Record/OpenRecord/?lType=@record.lType" class="UL2_baif3a">历史</a>
                                 <a href="/Plan/Post/@record.lType" class="UL2_baif3a">发帖</a>
                                 <a href="/Plan/Index/@record.lType?cur=2" class="UL2_baif3a">排行</a>
